--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jimp": "^1.6.0",
     "json": "^11.0.0",
     "link-preview-js": "^3.0.0",
+    "lru-cache": "^10.4.3",
     "open": "^8.4.2",
     "prettier": "^3.5.3",
     "protobufjs-cli": "^1.1.3",
